# entropy

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: future_version.yaml  release.yaml
alembic/: env.py
alembic/versions/: 23122215e2f4_changing_the_columns_in_work_table.py  37d224f12406_create_hobby_table.py  4a17123661ce_creating_skills_title_and_categories_.py  4fb9cea6842a_create_users.py  84a244c3ef8b_adding_priority_to_work.py  8810391027d6_create_wanna_be_table.py  97babe2bb3cd_create_goals_table_and_create_priority_.py  9cf4dbba8641_adding_a_work_id_column_in_task.py  a17e6eb97d86_creating_goals_for_life.py  a23159a06742_create_work_table.py  ab73093d0b71_creating_assignment_table.py  b911110912b1_photo_column_to_users.py  bfc8783ffe69_create_a_table_quest.py  c0fe7084b00d_create_a_task_table.py  c9b1059b3b7b_creating_assignment_id_for_assignment_.py  ccd1bd03c9cb_track_bad_distractions_and_distractions_.py  da5ad720dcce_create_task_session_table.py  f1f602e9aaf8_create_statics.py  f346c4eb678d_dropping_work_and_create_new_work_with_.py  f55da28be48d_adding_path_to_distractions.py
docs/: Design.md  oldList.md
somn/: README.md  pyproject.toml
somn/src/somn/: main.py
src/: act.py  animations_manager.py  engine.py  models.py  quest_manager.py  utility.py
src/command/: admin.py  hobbies.py  skill.py  stats.py
src/service/: github_service.py
test/: test_entropy.py
